syntax = "proto3";
option csharp_namespace = "GrpcIdentityServer";

package  IndentityServer;

service IdentityServerProvider {
	rpc GetDumyCount (DumpyCountRequest) returns (DumpyCountResponse);

}

message DumpyCountRequest{
	string Temp =1;
}

message DumpyCountResponse{
	string Temp =2;
}